# stm32ai-modelzoo-services

./: .gitignore  environment.yml  requirements.txt
common/training/: common_training.py
common/utils/: models_utils.py
common_root/: pyproject.toml  readme.txt
common_root/common/benchmarking/: common_benchmark.py
common_root/common/data_augmentation/: random_affine.py
common_root/common/optimization/: bn_weights_folding.py  model_formatting_ptq_per_tensor.py
common_root/common/stm32ai_dc/backend/cloud/: cloud.py
common_root/common/training/: common_training.py
common_root/common/utils/: gpu_utils.py  models_utils.py
human_activity_recognition/src/: gaussian_noise_experiment.yaml  har_new.yml  input_size_experiment.yaml  input_size_experiment_rad.yaml  start_mlflow.sh  stm32ai_main.py  user_config.yaml
human_activity_recognition/src/conf/: ddcnn_3_tuner.yaml  ddcnn_augmentation_tuner.yaml  ddcnn_optuna_tuner.yaml  ddcnn_optuna_tuner_2.yaml  ddcnn_tuner.yaml  gaussian_noise_experiment.yaml  gaussian_noise_experiment_gmp.yaml  gmp_tuner.yaml  input_size_experiment_rad.yaml  richard_v1.yaml
human_activity_recognition/src/evaluation/: evaluate.py
human_activity_recognition/src/experiments/: augmentation_tuner.py  experiment_utils.py  gaussian_noise_sweep.py  input_len_sweep.py  keras_tuner.py  keras_tuner_gmp.py  tuner.py  tuner_utils.py
human_activity_recognition/src/mlflow/: aggregate_and_plot.py
human_activity_recognition/src/mlflow_utils/: update_sweep_id.py
human_activity_recognition/src/models/: ddcnn_2_tuner.py  ddcnn_3_tuner.py  (+6 more)
(+19 files in other folders)
