[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common"
version = "0.1.0"
description = "Shared utilities for STM32 AI projects"
authors = [
    { name = "Richard Matthews" }
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]
